--- a/docs/api/qiskit/dev/qiskit.circuit.library.DraperQFTAdder.mdx
+++ b/docs/api/qiskit/dev/qiskit.circuit.library.DraperQFTAdder.mdx
@@ -33,7 +33,7 @@ python_api_name: qiskit.circuit.library.DraperQFTAdder
   <Admonition title="See also" type="note">
     The following generic gate objects perform additions, like this circuit class, but allow the compiler to select the optimal decomposition based on the context. Specific implementations can be set via the [`HLSConfig`](qiskit.transpiler.passes.HLSConfig "qiskit.transpiler.passes.HLSConfig"), e.g. this circuit can be chosen via `Adder=["qft_d00"]`.
 
-    **`ModularAdderGate`: A generic inplace adder, modulo $2^n$. This**
+    **[`ModularAdderGate`](qiskit.circuit.library.ModularAdderGate "qiskit.circuit.library.ModularAdderGate"): A generic inplace adder, modulo $2^n$. This**
 
     is functionally equivalent to `kind="fixed"`.
 
