--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -59,7 +59,7 @@ Available plans:
     )
     ```
 
-    Close out of the REPL with `exit()`. Whenever you need to authenticate to the service, you can load your credentials with `QiskitRuntimeService()`. The `channel` parameter distinguishes between different account types.
+    Close out of the REPL with `exit()`. Whenever you need to authenticate to the service, you can load your credentials with `QiskitRuntimeService()`.
 
     <Admonition type="warning">
       Protect your API token! Never include your token in plain text in a notebook file. If you are on a trusted machine, use the `save_account()` method described in the previous step to store your credentials, keeping in mind that your token will still be stored as plain text on your local drive. If you are not on a trusted machine, use the instructions in the next step.
