Fix CI complaints

--- a/docs/guides/qiskit-addons-mpf-get-started.ipynb
+++ b/docs/guides/qiskit-addons-mpf-get-started.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting started with MPF\n",
+    "## Getting started with Multi-product formulas (MPF)\n",
     "\n",
-    "\n"
+    "This guide demonstrates how to use the `qiskit-addon-mpf` package using the time evolution of an Ising model as an example. Building a Multi-Product Formula (MPF) using this package can achieve lower Trotter error on observable measurements. It does so by executing several circuits, each of which evolves the system with a different number of Trotter steps, and recombines \n"
    ]
   },
   {
@@ -16,6 +16,8 @@
   }
  ],
  "metadata": {
+  "title": "Getting started with multi-product formulas (MPF)",
+  "description": "Get started using the MPF addon using the time evolution of an Ising chain as an example",
   "language_info": {
    "name": "python"
   }
