--- a/docs/guides/qiskit-addons-mpf.ipynb
+++ b/docs/guides/qiskit-addons-mpf.ipynb
@@ -83,6 +83,8 @@
   }
  ],
  "metadata": {
+  "title": "Overview Multi-product formula (MPF) addon",
+  "description": "Overview page of the qiskit addon which generates multi-product formulas",
   "language_info": {
    "name": "python"
   }
