Generate qiskit-addon-aqc-tensor 0.1.2

--- a/docs/api/qiskit-addon-aqc-tensor/release-notes.mdx
+++ b/docs/api/qiskit-addon-aqc-tensor/release-notes.mdx
@@ -10,9 +10,21 @@ in_page_toc_max_heading_level: 2
 
 # Approximate quantum compilation (AQC-Tensor) release notes
 
-<span id="release-notes-0-1-1" />
+<span id="release-notes-0-1-2" />
 
 <span id="id2" />
+
+## 0.1.2
+
+<span id="release-notes-0-1-2-bug-fixes" />
+
+### Bug Fixes
+
+*   This release fixes the import of `quimb_gate()` to work on versions of qiskit-quimb greater than 0.0.5. The aforementioned function is now imported from the toplevel `qiskit_quimb` instead of `qiskit_quimb.circuit`.
+
+<span id="release-notes-0-1-1" />
+
+<span id="id3" />
 
 ## 0.1.1
 
@@ -24,7 +36,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-1-0" />
 
-<span id="id3" />
+<span id="id4" />
 
 ## 0.1.0
 
