Fix type hints for a few classes

--- a/docs/api/qiskit/dev/qiskit.quantum_info.PTM.mdx
+++ b/docs/api/qiskit/dev/qiskit.quantum_info.PTM.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.quantum_info.PTM
 
 # PTM
 
-<Class id="qiskit.quantum_info.PTM" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L34-L200" signature="qiskit.quantum_info.PTM(data, input_dims=None, output_dims=None)" modifiers="class">
+<Class id="qiskit.quantum_info.PTM" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L34-L195" signature="qiskit.quantum_info.PTM(data, input_dims=None, output_dims=None)" modifiers="class">
   Bases: `QuantumChannel`
 
   Pauli Transfer Matrix (PTM) representation of a Quantum Channel.
@@ -39,10 +39,9 @@ $$
 
   **Parameters**
 
-  *   **or** (*data (*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Instruction or BaseOperator or matrix): data to initialize superoperator.
-  *   **input\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – the input subsystem dimensions. \[Default: None]
-  *   **output\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – the output subsystem dimensions. \[Default: None]
-  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| BaseOperator | np.ndarray*) –
+  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| BaseOperator | np.ndarray*) – data to initialize superoperator.
+  *   **input\_dims** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the input subsystem dimensions.
+  *   **output\_dims** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the output subsystem dimensions.
 
   **Raises**
 
@@ -96,7 +95,7 @@ $$
 
   ### adjoint
 
-  <Function id="qiskit.quantum_info.PTM.adjoint" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L162-L163" signature="adjoint()">
+  <Function id="qiskit.quantum_info.PTM.adjoint" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L157-L158" signature="adjoint()">
     Return the adjoint quantum channel.
 
     <Admonition title="Note" type="note">
@@ -106,7 +105,7 @@ $$
 
   ### compose
 
-  <Function id="qiskit.quantum_info.PTM.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L165-L183" signature="compose(other, qargs=None, front=False)">
+  <Function id="qiskit.quantum_info.PTM.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L160-L178" signature="compose(other, qargs=None, front=False)">
     Return the operator composition with another PTM.
 
     **Parameters**
@@ -136,7 +135,7 @@ $$
 
   ### conjugate
 
-  <Function id="qiskit.quantum_info.PTM.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L153-L157" signature="conjugate()">
+  <Function id="qiskit.quantum_info.PTM.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L148-L152" signature="conjugate()">
     Return the conjugate quantum channel.
 
     <Admonition title="Note" type="note">
@@ -175,7 +174,7 @@ $$
 
   ### expand
 
-  <Function id="qiskit.quantum_info.PTM.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L190-L193" signature="expand(other)">
+  <Function id="qiskit.quantum_info.PTM.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L185-L188" signature="expand(other)">
     Return the reverse-order tensor product with another PTM.
 
     **Parameters**
@@ -317,7 +316,7 @@ $$
 
   ### tensor
 
-  <Function id="qiskit.quantum_info.PTM.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L185-L188" signature="tensor(other)">
+  <Function id="qiskit.quantum_info.PTM.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L180-L183" signature="tensor(other)">
     Return the tensor product with another PTM.
 
     **Parameters**
@@ -371,7 +370,7 @@ $$
 
   ### transpose
 
-  <Function id="qiskit.quantum_info.PTM.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L159-L160" signature="transpose()">
+  <Function id="qiskit.quantum_info.PTM.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/ptm.py#L154-L155" signature="transpose()">
     Return the transpose quantum channel.
 
     <Admonition title="Note" type="note">
