--- a/docs/api/qiskit/dev/qiskit.quantum_info.Chi.mdx
+++ b/docs/api/qiskit/dev/qiskit.quantum_info.Chi.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.quantum_info.Chi
 
 # Chi
 
-<Class id="qiskit.quantum_info.Chi" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L35-L187" signature="qiskit.quantum_info.Chi(data, input_dims=None, output_dims=None)" modifiers="class">
+<Class id="qiskit.quantum_info.Chi" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L35-L182" signature="qiskit.quantum_info.Chi(data, input_dims=None, output_dims=None)" modifiers="class">
   Bases: `QuantumChannel`
 
   Pauli basis Chi-matrix representation of a quantum channel.
@@ -31,10 +31,9 @@ $$
 
   **Parameters**
 
-  *   **or** (*data (*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Instruction or BaseOperator or matrix): data to initialize superoperator.
-  *   **input\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – the input subsystem dimensions. \[Default: None]
-  *   **output\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – the output subsystem dimensions. \[Default: None]
-  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| BaseOperator | np.ndarray*) –
+  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| BaseOperator | np.ndarray*) – data to initialize superoperator.
+  *   **input\_dims** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the input subsystem dimensions.
+  *   **output\_dims** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the output subsystem dimensions.
 
   **Raises**
 
@@ -88,7 +87,7 @@ $$
 
   ### adjoint
 
-  <Function id="qiskit.quantum_info.Chi.adjoint" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L160-L161" signature="adjoint()">
+  <Function id="qiskit.quantum_info.Chi.adjoint" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L155-L156" signature="adjoint()">
     Return the adjoint quantum channel.
 
     <Admonition title="Note" type="note">
@@ -98,7 +97,7 @@ $$
 
   ### compose
 
-  <Function id="qiskit.quantum_info.Chi.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L163-L170" signature="compose(other, qargs=None, front=False)">
+  <Function id="qiskit.quantum_info.Chi.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L158-L165" signature="compose(other, qargs=None, front=False)">
     Return the operator composition with another Chi.
 
     **Parameters**
@@ -128,7 +127,7 @@ $$
 
   ### conjugate
 
-  <Function id="qiskit.quantum_info.Chi.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L151-L155" signature="conjugate()">
+  <Function id="qiskit.quantum_info.Chi.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L146-L150" signature="conjugate()">
     Return the conjugate quantum channel.
 
     <Admonition title="Note" type="note">
@@ -167,7 +166,7 @@ $$
 
   ### expand
 
-  <Function id="qiskit.quantum_info.Chi.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L177-L180" signature="expand(other)">
+  <Function id="qiskit.quantum_info.Chi.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L172-L175" signature="expand(other)">
     Return the reverse-order tensor product with another Chi.
 
     **Parameters**
@@ -309,7 +308,7 @@ $$
 
   ### tensor
 
-  <Function id="qiskit.quantum_info.Chi.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L172-L175" signature="tensor(other)">
+  <Function id="qiskit.quantum_info.Chi.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L167-L170" signature="tensor(other)">
     Return the tensor product with another Chi.
 
     **Parameters**
@@ -363,7 +362,7 @@ $$
 
   ### transpose
 
-  <Function id="qiskit.quantum_info.Chi.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L157-L158" signature="transpose()">
+  <Function id="qiskit.quantum_info.Chi.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/chi.py#L152-L153" signature="transpose()">
     Return the transpose quantum channel.
 
     <Admonition title="Note" type="note">
