--- a/docs/api/qiskit/dev/qiskit.quantum_info.SuperOp.mdx
+++ b/docs/api/qiskit/dev/qiskit.quantum_info.SuperOp.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.quantum_info.SuperOp
 
 # SuperOp
 
-<Class id="qiskit.quantum_info.SuperOp" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L40-L373" signature="qiskit.quantum_info.SuperOp(data, input_dims=None, output_dims=None)" modifiers="class">
+<Class id="qiskit.quantum_info.SuperOp" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L40-L368" signature="qiskit.quantum_info.SuperOp(data, input_dims=None, output_dims=None)" modifiers="class">
   Bases: `QuantumChannel`
 
   Superoperator representation of a quantum channel.
@@ -31,10 +31,9 @@ $$
 
   **Parameters**
 
-  *   **or** (*data (*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Instruction or BaseOperator or matrix): data to initialize superoperator.
-  *   **input\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – the input subsystem dimensions. \[Default: None]
-  *   **output\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – the output subsystem dimensions. \[Default: None]
-  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| BaseOperator | np.ndarray*) –
+  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| BaseOperator | np.ndarray*) – data to initialize superoperator.
+  *   **input\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the input subsystem dimensions.
+  *   **output\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)") *| None*) – the output subsystem dimensions.
 
   **Raises**
 
@@ -88,7 +87,7 @@ $$
 
   ### adjoint
 
-  <Function id="qiskit.quantum_info.SuperOp.adjoint" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L162-L166" signature="adjoint()">
+  <Function id="qiskit.quantum_info.SuperOp.adjoint" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L157-L161" signature="adjoint()">
     Return the adjoint quantum channel.
 
     <Admonition title="Note" type="note">
@@ -98,7 +97,7 @@ $$
 
   ### compose
 
-  <Function id="qiskit.quantum_info.SuperOp.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L187-L235" signature="compose(other, qargs=None, front=False)">
+  <Function id="qiskit.quantum_info.SuperOp.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L182-L230" signature="compose(other, qargs=None, front=False)">
     Return the operator composition with another SuperOp.
 
     **Parameters**
@@ -128,7 +127,7 @@ $$
 
   ### conjugate
 
-  <Function id="qiskit.quantum_info.SuperOp.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L151-L154" signature="conjugate()">
+  <Function id="qiskit.quantum_info.SuperOp.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L146-L149" signature="conjugate()">
     Return the conjugate quantum channel.
 
     <Admonition title="Note" type="note">
@@ -167,7 +166,7 @@ $$
 
   ### expand
 
-  <Function id="qiskit.quantum_info.SuperOp.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L173-L176" signature="expand(other)">
+  <Function id="qiskit.quantum_info.SuperOp.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L168-L171" signature="expand(other)">
     Return the reverse-order tensor product with another SuperOp.
 
     **Parameters**
@@ -309,7 +308,7 @@ $$
 
   ### tensor
 
-  <Function id="qiskit.quantum_info.SuperOp.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L168-L171" signature="tensor(other)">
+  <Function id="qiskit.quantum_info.SuperOp.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L163-L166" signature="tensor(other)">
     Return the tensor product with another SuperOp.
 
     **Parameters**
@@ -363,7 +362,7 @@ $$
 
   ### transpose
 
-  <Function id="qiskit.quantum_info.SuperOp.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L156-L160" signature="transpose()">
+  <Function id="qiskit.quantum_info.SuperOp.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/channel/superop.py#L151-L155" signature="transpose()">
     Return the transpose quantum channel.
 
     <Admonition title="Note" type="note">
