--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -187,7 +187,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.get_backend(backend_name)"
+    "backend = service.backend(backend_name)"
    ]
   },
   {
@@ -216,7 +216,7 @@
     "%%writefile --append ./source_files/transpile_remote.py\n",
     "\n",
     "results = [\n",
-    "    transpile_remote(circuit, backend)\n",
+    "    transpile_remote(circuit, 1, backend)\n",
     "    for circuit in circuits\n",
     "]\n",
     "\n",
@@ -360,7 +360,7 @@
     }
    ],
    "source": [
-    "serverless.list()"
+    "serverless.list()[:3]  # Limit to first three functions"
    ]
   },
   {
