--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -113,7 +113,7 @@
     "from qiskit_ibm_catalog import QiskitServerless\n",
     "\n",
     "serverless = QiskitServerless()\n",
-    "serverless.list()"
+    "serverless.list()[:3]  # Limit to first three programs"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "source": [
     "from qiskit.circuit.random import random_circuit\n",
     "\n",
-    "qc_random = [(random_circuit(4, 4, measure=True)) for _ in range(30)]\n",
+    "qc_random = [(random_circuit(4, 4, measure=True)) for _ in range(10)]\n",
     "qc_random[0].draw(output=\"mpl\", idle_wires=False)"
    ]
   },
@@ -305,7 +305,9 @@
    "source": [
     "<Admonition type=\"tip\">\n",
     "Currently, the IBM Quantum workloads table only reflects Qiskit Runtime workloads. Use `job.status()` to see your Qiskit Serverless workload's current status.\n",
-    "</Admonition>"
+    "</Admonition>\n",
+    "\n",
+    "You've successfully run your first Qiskit Serverless program!"
    ]
   },
   {
@@ -342,40 +344,13 @@
    "id": "bff87452-bf98-4c7a-85c8-d280d89a7970",
    "metadata": {},
    "source": [
-    "Once a program is `DONE`, you can use `job.results()` to fetch the result stored in `save_result()`:"
+    "At any time, you can also cancel a job:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "id": "bc4fbe20-456c-4ce4-bf26-dfdb8b68e89f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = job.result()\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "925a8d81-e85b-4e26-a9e1-3a01e8e0785b",
-   "metadata": {},
-   "source": [
-    "At any time, you can also cancel a job:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c0d999d9-af9e-4312-b5bb-f60f714257ba",
    "metadata": {},
    "outputs": [
     {
@@ -391,6 +366,34 @@
    ],
    "source": [
     "job.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "925a8d81-e85b-4e26-a9e1-3a01e8e0785b",
+   "metadata": {},
+   "source": [
+    "Once a program is `DONE`, you can use `job.results()` to fetch the result stored in `save_result()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c0d999d9-af9e-4312-b5bb-f60f714257ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can't get results from a cancelled job, so we'll fetch a completed one instead\n",
+    "completed_job = next(job for job in serverless.jobs() if job.status() == 'DONE')\n",
+    "completed_job.result()"
    ]
   },
   {
@@ -437,14 +440,6 @@
   {
    "cell_type": "markdown",
    "id": "fd3415a0-0e55-4991-8764-c9fe66eb2664",
-   "metadata": {},
-   "source": [
-    "You've successfully run your first Qiskit Serverless program!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5db59260-8e39-434b-a60d-3d620b9e6995",
    "metadata": {},
    "source": [
     "## Next steps\n",
