--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -491,6 +491,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<Admonition type=\"tip\">\n",
+    "  The V1 Sampler output was quasi-probabilities.  You can convert counts to quasi-probabilities by dividing counts by the number of shots, as explained in  [Migrate to the Qiskit Runtime V2 primitives.](migration-guides/v2-primitives#sampler-examples)\n",
+    "</Admonition type=\"tip\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c5c93b0f-724f-44b8-9d9d-bb93daf1950b",
    "metadata": {},
    "source": [
