Re-run all notebooks

--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -25,10 +25,16 @@
     "\n",
     "```\n",
     "qiskit[all]~=1.2.4\n",
+    "qiskit-ibm-runtime~=0.33.2\n",
     "qiskit-aer~=0.15.1\n",
-    "qiskit-ibm-runtime~=0.31.0\n",
-    "qiskit-serverless~=0.17.1\n",
-    "qiskit-ibm-catalog~=0.1\n",
+    "qiskit-serverless~=0.18.0\n",
+    "qiskit-ibm-catalog~=0.2\n",
+    "qiskit-addon-sqd~=0.8.0\n",
+    "qiskit-addon-utils~=0.1.0\n",
+    "qiskit-addon-aqc-tensor~=0.1.2\n",
+    "qiskit-addon-obp~=0.1.0\n",
+    "scipy~=1.14.1\n",
+    "pyscf~=2.7.0\n",
     "```\n",
     "</details>"
    ]
@@ -202,22 +208,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instruction(name='id', num_qubits=1, num_clbits=0, params=[]) (0,)\n",
-      "Instruction(name='id', num_qubits=1, num_clbits=0, params=[]) (1,)\n",
-      "Instruction(name='sx', num_qubits=1, num_clbits=0, params=[]) (0,)\n",
-      "Instruction(name='sx', num_qubits=1, num_clbits=0, params=[]) (1,)\n",
-      "Instruction(name='x', num_qubits=1, num_clbits=0, params=[]) (0,)\n",
-      "Instruction(name='x', num_qubits=1, num_clbits=0, params=[]) (1,)\n",
-      "Delay(duration=t[unit=dt]) (0,)\n",
-      "Delay(duration=t[unit=dt]) (1,)\n",
       "Instruction(name='cx', num_qubits=2, num_clbits=0, params=[]) (0, 1)\n",
       "Instruction(name='cx', num_qubits=2, num_clbits=0, params=[]) (1, 0)\n",
-      "Instruction(name='rz', num_qubits=1, num_clbits=0, params=[Parameter(λ)]) (0,)\n",
-      "Instruction(name='rz', num_qubits=1, num_clbits=0, params=[Parameter(λ)]) (1,)\n",
       "Instruction(name='reset', num_qubits=1, num_clbits=0, params=[]) (0,)\n",
       "Instruction(name='reset', num_qubits=1, num_clbits=0, params=[]) (1,)\n",
+      "Delay(duration=t[unit=dt]) (0,)\n",
+      "Delay(duration=t[unit=dt]) (1,)\n",
+      "Instruction(name='rz', num_qubits=1, num_clbits=0, params=[Parameter(λ)]) (0,)\n",
+      "Instruction(name='rz', num_qubits=1, num_clbits=0, params=[Parameter(λ)]) (1,)\n",
+      "Instruction(name='sx', num_qubits=1, num_clbits=0, params=[]) (0,)\n",
+      "Instruction(name='sx', num_qubits=1, num_clbits=0, params=[]) (1,)\n",
+      "Instruction(name='id', num_qubits=1, num_clbits=0, params=[]) (0,)\n",
+      "Instruction(name='id', num_qubits=1, num_clbits=0, params=[]) (1,)\n",
       "Instruction(name='measure', num_qubits=1, num_clbits=1, params=[]) (0,)\n",
-      "Instruction(name='measure', num_qubits=1, num_clbits=1, params=[]) (1,)\n"
+      "Instruction(name='measure', num_qubits=1, num_clbits=1, params=[]) (1,)\n",
+      "Instruction(name='x', num_qubits=1, num_clbits=0, params=[]) (0,)\n",
+      "Instruction(name='x', num_qubits=1, num_clbits=0, params=[]) (1,)\n"
      ]
     },
     {
