--- a/docs/guides/defaults-and-configuration-options.ipynb
+++ b/docs/guides/defaults-and-configuration-options.ipynb
@@ -25,10 +25,16 @@
     "\n",
     "```\n",
     "qiskit[all]~=1.2.4\n",
+    "qiskit-ibm-runtime~=0.33.2\n",
     "qiskit-aer~=0.15.1\n",
-    "qiskit-ibm-runtime~=0.31.0\n",
-    "qiskit-serverless~=0.17.1\n",
-    "qiskit-ibm-catalog~=0.1\n",
+    "qiskit-serverless~=0.18.0\n",
+    "qiskit-ibm-catalog~=0.2\n",
+    "qiskit-addon-sqd~=0.8.0\n",
+    "qiskit-addon-utils~=0.1.0\n",
+    "qiskit-addon-aqc-tensor~=0.1.2\n",
+    "qiskit-addon-obp~=0.1.0\n",
+    "scipy~=1.14.1\n",
+    "pyscf~=2.7.0\n",
     "```\n",
     "</details>"
    ]
@@ -260,7 +266,7 @@
     {
      "data": {
       "text/plain": [
-       "<qiskit.transpiler.passmanager.StagedPassManager at 0x12997ee90>"
+       "<qiskit.transpiler.passmanager.StagedPassManager at 0x128e6ea90>"
       ]
      },
      "execution_count": 3,
