--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -25,10 +25,16 @@
     "\n",
     "```\n",
     "qiskit[all]~=1.2.4\n",
+    "qiskit-ibm-runtime~=0.33.2\n",
     "qiskit-aer~=0.15.1\n",
-    "qiskit-ibm-runtime~=0.31.0\n",
-    "qiskit-serverless~=0.17.1\n",
-    "qiskit-ibm-catalog~=0.1\n",
+    "qiskit-serverless~=0.18.0\n",
+    "qiskit-ibm-catalog~=0.2\n",
+    "qiskit-addon-sqd~=0.8.0\n",
+    "qiskit-addon-utils~=0.1.0\n",
+    "qiskit-addon-aqc-tensor~=0.1.2\n",
+    "qiskit-addon-obp~=0.1.0\n",
+    "scipy~=1.14.1\n",
+    "pyscf~=2.7.0\n",
     "```\n",
     "</details>"
    ]
@@ -60,9 +66,9 @@
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibm_kyiv')>,\n",
-       " <IBMBackend('ibm_brisbane')>]"
+       "[<IBMBackend('ibm_brisbane')>,\n",
+       " <IBMBackend('ibm_sherbrooke')>,\n",
+       " <IBMBackend('ibm_kyiv')>]"
       ]
      },
      "execution_count": 1,
@@ -133,9 +139,9 @@
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibm_kyiv')>,\n",
-       " <IBMBackend('ibm_brisbane')>]"
+       "[<IBMBackend('ibm_brisbane')>,\n",
+       " <IBMBackend('ibm_sherbrooke')>,\n",
+       " <IBMBackend('ibm_kyiv')>]"
       ]
      },
      "execution_count": 3,
@@ -164,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "<IBMBackend('ibm_brisbane')>"
+       "<IBMBackend('ibm_sherbrooke')>"
       ]
      },
      "execution_count": 4,
@@ -247,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "QubitProperties(t1=0.0004359191921774979, t2=9.098970775335616e-05, frequency=4635662846.425661)"
+       "QubitProperties(t1=0.0004326415085832586, t2=0.00014418562429117506, frequency=4635662846.425661)"
       ]
      },
      "execution_count": 6,
@@ -278,7 +284,7 @@
     {
      "data": {
       "text/plain": [
-       "InstructionProperties(duration=5.333333333333332e-07, error=0.013205165272520247, calibration=PulseQobj)"
+       "InstructionProperties(duration=5.333333333333332e-07, error=0.005938460380319893, calibration=PulseQobj)"
       ]
      },
      "execution_count": 7,
@@ -307,7 +313,7 @@
     {
      "data": {
       "text/plain": [
-       "InstructionProperties(duration=1.216e-06, error=0.007400000000000073, calibration=PulseQobj)"
+       "InstructionProperties(duration=1.216e-06, error=0.009399999999999964, calibration=PulseQobj)"
       ]
      },
      "execution_count": 8,
