--- a/docs/guides/simulate-with-qiskit-aer.ipynb
+++ b/docs/guides/simulate-with-qiskit-aer.ipynb
@@ -25,10 +25,16 @@
     "\n",
     "```\n",
     "qiskit[all]~=1.2.4\n",
+    "qiskit-ibm-runtime~=0.33.2\n",
     "qiskit-aer~=0.15.1\n",
-    "qiskit-ibm-runtime~=0.31.0\n",
-    "qiskit-serverless~=0.17.1\n",
-    "qiskit-ibm-catalog~=0.1\n",
+    "qiskit-serverless~=0.18.0\n",
+    "qiskit-ibm-catalog~=0.2\n",
+    "qiskit-addon-sqd~=0.8.0\n",
+    "qiskit-addon-utils~=0.1.0\n",
+    "qiskit-addon-aqc-tensor~=0.1.2\n",
+    "qiskit-addon-obp~=0.1.0\n",
+    "scipy~=1.14.1\n",
+    "pyscf~=2.7.0\n",
     "```\n",
     "</details>"
    ]
@@ -227,28 +233,25 @@
     {
      "data": {
       "text/plain": [
-       "{'00000000': 66,\n",
-       " '10100000': 2,\n",
-       " '00001111': 2,\n",
-       " '00001100': 1,\n",
-       " '01010000': 1,\n",
-       " '00101000': 3,\n",
-       " '10101000': 1,\n",
-       " '00001000': 1,\n",
-       " '10000000': 2,\n",
-       " '01000000': 3,\n",
-       " '11000100': 1,\n",
-       " '11000000': 1,\n",
-       " '00001010': 3,\n",
-       " '11111000': 1,\n",
-       " '00111100': 1,\n",
-       " '00010100': 5,\n",
+       "{'10000000': 5,\n",
+       " '00000000': 69,\n",
+       " '00000010': 1,\n",
        " '00011000': 1,\n",
-       " '00000100': 1,\n",
-       " '01100000': 1,\n",
-       " '01001100': 1,\n",
-       " '10000101': 1,\n",
-       " '00110000': 1}"
+       " '11000000': 3,\n",
+       " '00010100': 2,\n",
+       " '00000011': 2,\n",
+       " '01000000': 2,\n",
+       " '00000110': 2,\n",
+       " '10011000': 1,\n",
+       " '10100000': 2,\n",
+       " '00000101': 3,\n",
+       " '00001010': 1,\n",
+       " '00010001': 1,\n",
+       " '00110000': 1,\n",
+       " '11110000': 1,\n",
+       " '00101000': 1,\n",
+       " '00011110': 1,\n",
+       " '10000100': 1}"
       ]
      },
      "execution_count": 5,
