Increase job limit and add back to CI

--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "# Get ID of most recent successful job for demonstration.\n",
     "# This will not work if you've never successfully run a job.\n",
-    "successful_job = next(j for j in service.jobs() if j.status().name == \"DONE\")\n",
+    "successful_job = next(j for j in service.jobs(limit=1000) if j.status().name == \"DONE\")\n",
     "job_id = successful_job.job_id()\n",
     "print(job_id)"
    ]
